--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -1,49 +1,78 @@
 {
-    "actions_title": "Actions",
-    "list_title": "List",
-    "modal_save_button": "Save",
-    "modal_delete_button": "Delete",
-    "modal_edit_button": "Edit",
-    "modal_create_button": "Create",
-    "modal_cancel_button": "Cancel",
-    "warning_alert_label": "Warning",
-    "docs": {
-        "sharedfolders": "Shared folders",
-        "more_info_about": "More info about {docsLink}."
-    },
-    "dashboard" : {
-        "title": "File server dashboard",
-        "menu_title": "File server"
-    },
-    "sharedfolders" : {
-        "title": "Shared folders",
-        "item_edit_button": "Edit",
-        "item_delete_button": "Delete",
-        "create_sharedfolder_button": "Create a shared folder",
-        "menu_title": "Shared folders",
-        "edit_title": "Edit shared folder {name}",
-        "name_label": "Name",
-        "description_label": "Description",
-        "delete_title": "Delete shared folder {name}",
-        "delete_warning_title": "Warning",
-        "delete_warning_message": "All files in {name} will be deleted. This action cannot be reverted!",
-        "delete_confirm_message": "Are you sure?",
-        "create_title": "Create a new shared folder"
-    },
-    "audit" : {
-        "menu_title": "Audit"
-    },
-    "logs" : {
-        "title": "Logs",
-        "menu_title": "Logs"
-    },
-    "settings" : {
-        "menu_title": "Settings"
-    },
-    "about" : {
-        "website": "Web site",
-        "bug_tracker": "Bug tracker",
-        "title": "About",
-        "menu_title": "About"
-    }
+  "actions_title": "Actions",
+  "list_title": "List",
+  "modal_save_button": "Save",
+  "modal_delete_button": "Delete",
+  "modal_edit_button": "Edit",
+  "modal_create_button": "Create",
+  "modal_cancel_button": "Cancel",
+  "warning_alert_label": "Warning",
+  "action": "Action",
+  "search": "Search",
+  "list": "List",
+  "are_you_sure": "Are you sure",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "docs": {
+    "sharedfolders": "Shared folders",
+    "more_info_about": "More info about {docsLink}.",
+    "audit": "Audit"
+  },
+  "dashboard": {
+    "title": "File server dashboard",
+    "menu_title": "File server"
+  },
+  "sharedfolders": {
+    "title": "Shared folders",
+    "item_edit_button": "Edit",
+    "item_delete_button": "Delete",
+    "create_sharedfolder_button": "Create a shared folder",
+    "menu_title": "Shared folders",
+    "edit_title": "Edit shared folder {name}",
+    "name_label": "Name",
+    "description_label": "Description",
+    "delete_title": "Delete shared folder {name}",
+    "delete_warning_title": "Warning",
+    "delete_warning_message": "All files in {name} will be deleted. This action cannot be reverted!",
+    "delete_confirm_message": "Are you sure?",
+    "create_title": "Create a new shared folder"
+  },
+  "audit": {
+    "menu_title": "Audit",
+    "title": "Audit",
+    "date": "Date & Time",
+    "user": "User",
+    "address": "Address",
+    "share": "Share",
+    "message": "File or Path",
+    "from": "From",
+    "to": "To",
+    "filter": "Filter",
+    "all": "All",
+    "rename": "Rename",
+    "read_file": "Access file",
+    "delete_file": "Delete file",
+    "create_directory": "Create directory",
+    "delete_directory": "Delete directory",
+    "delete_all_audits": "Delete all audits",
+    "update": "Update",
+    "delete": "Delete",
+    "updated_ok": "Audit updated successfully!",
+    "updated_error": "Audit not updated.",
+    "deleted_ok": "Audit deleted successfully!",
+    "deleted_error": "Audit not deleted."
+  },
+  "logs": {
+    "title": "Logs",
+    "menu_title": "Logs"
+  },
+  "settings": {
+    "menu_title": "Settings"
+  },
+  "about": {
+    "website": "Web site",
+    "bug_tracker": "Bug tracker",
+    "title": "About",
+    "menu_title": "About"
+  }
 }
