--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -76,8 +76,11 @@
     "deleted_error": "Audit not deleted."
   },
   "logs": {
+    "menu_title": "Logs",
     "title": "Logs",
-    "menu_title": "Logs"
+    "start_follow_button": "Follow",
+    "stop_follow_button": "Stop following",
+    "filter_label": "Regexp filter"
   },
   "settings": {
     "menu_title": "Settings",
