ui. Add more shared folders details to list view

--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -50,6 +50,9 @@
     "create_sharedfolder_button": "Create a shared folder",
     "menu_title": "Shared folders",
     "edit_title": "Edit shared folder {name}",
+    "list_view_size_label": "Size",
+    "list_view_audit_label": "Audit",
+    "list_view_files_label": "Files",
     "name_label": "Name",
     "description_label": "Description",
     "delete_title": "Delete shared folder {name}",
