--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -4,6 +4,7 @@
   "modal_save_button": "Save",
   "modal_delete_button": "Delete",
   "modal_edit_button": "Edit",
+  "modal_reset_permissions_button": "Reset",
   "modal_create_button": "Create",
   "modal_cancel_button": "Cancel",
   "warning_alert_label": "Warning",
@@ -46,10 +47,15 @@
   "sharedfolders": {
     "title": "Shared folders",
     "item_edit_button": "Edit",
+    "item_reset_permissions_button": "Reset permissions",
     "item_delete_button": "Delete",
     "create_sharedfolder_button": "Create a shared folder",
     "menu_title": "Shared folders",
     "edit_title": "Edit shared folder {name}",
+    "reset_permissions_title": "Reset permissions on folder {name}",
+    "reset_permissions_warning_title": "This action cannot be reverted!",
+    "reset_permissions_warning_message": "Depending on the shared folder content size, it might require some time to run",
+    "reset_permissions_confirm_message": "Reset permissions to default value on files and sub-folders of shared folder {name}?",
     "list_view_size_label": "Size",
     "list_view_audit_label": "Audit",
     "list_view_files_label": "Files",
@@ -79,9 +85,11 @@
     "item_edit_error": "Shared folder edit failed",
     "item_create_error": "Shared folder creation failed",
     "item_delete_error": "Shared folder deletion failed",
+    "item_reset-permissions_error": "Shared folder permissions reset failed",
     "item_edit_ok": "Shared folder edited correctly",
     "item_create_ok": "Shared folder created correctly",
     "item_delete_ok": "Shared folder deleted correctly",
+    "item_reset-permissions_ok": "Shared folder permissions reset correctly",
     "no_acls_support_title": "Access to shared folders is possible only as guest",
     "no_acls_support_message": "To enable Samba authentication and special access options configure an Active Directory accounts provider."
   },
