--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -8,7 +8,6 @@
   "modal_migrate_button": "Migrate",
   "modal_create_button": "Create",
   "modal_cancel_button": "Cancel",
-  "warning_alert_label": "Warning",
   "action": "Action",
   "search": "Search",
   "list": "List",
@@ -70,7 +69,7 @@
     "migrate_confirm_message": "Migrate the shared folder to virtual host {vhost}?",
     "reset_permissions_title": "Reset permissions on folder {name}",
     "reset_permissions_warning_title": "Warning!",
-    "reset_permissions_warning_message": "Depending on the shared folder content size, it might require some time to run",
+    "reset_permissions_warning_message": "Depending on the shared folder content size, it might require some time to run.",
     "reset_permissions_confirm_message": "Reset permissions to default value on files and sub-folders of shared folder {name}?",
     "list_view_size_label": "Size",
     "list_view_audit_label": "Audit",
@@ -78,7 +77,7 @@
     "name_label": "Name",
     "description_label": "Description",
     "delete_title": "Delete shared folder {name}",
-    "delete_warning_title": "Warning",
+    "delete_warning_title": "Warning!",
     "delete_warning_message": "All files in {name} will be deleted. This action cannot be reverted!",
     "delete_confirm_message": "Are you sure?",
     "create_title": "Create a new shared folder",
@@ -108,7 +107,7 @@
     "item_delete_ok": "Shared folder deleted correctly",
     "item_reset-permissions_ok": "Shared folder permissions reset correctly",
     "item_migrate_ok": "Shared folder migrated correctly",
-    "no_acls_support_title": "Access to shared folders is possible only as guest",
+    "no_acls_support_title": "Access to shared folders is possible only as guest.",
     "no_acls_support_message": "To enable Samba authentication and special access options configure an Active Directory accounts provider."
   },
   "audit": {
