ui. change search mode in audit log
Nethserver/dev#5881

--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -24,6 +24,15 @@
   "install_packages": "Install packages",
   "packages_installed_ok": "Packages installed successfully!",
   "packages_installed_error": "Packages not installed.",
+  "details": "Details",
+  "next": "Next",
+  "back": "Back",
+  "close": "Close",
+  "prev": "Previous",
+  "of": "of",
+  "or": "or",
+  "with": "with",
+  "all": "All",
   "docs": {
     "sharedfolders": "Shared folders",
     "more_info_about": "More info about {docsLink}.",
@@ -119,10 +128,10 @@
     "user": "User",
     "address": "Address",
     "share": "Share",
-    "message": "File or Path",
+    "message": "File or Directory",
     "from": "From",
     "to": "To",
-    "filter": "Filter",
+    "filter": "Search",
     "all": "All",
     "rename": "Rename",
     "read_file": "Access file",
@@ -130,12 +139,15 @@
     "create_directory": "Create directory",
     "delete_directory": "Delete directory",
     "delete_all_audits": "Delete all audits",
-    "update": "Update",
+    "update": "Refresh audit database",
     "delete": "Delete",
     "updated_ok": "Audit updated successfully!",
     "updated_error": "Audit not updated.",
     "deleted_ok": "Audit deleted successfully!",
-    "deleted_error": "Audit not deleted."
+    "deleted_error": "Audit not deleted.",
+    "details": "Show details",
+    "show_audit_details": "Show audit details",
+    "update_at": "Update at"
   },
   "logs": {
     "menu_title": "Logs",
