--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -38,7 +38,8 @@
     "more_info_about": "More info about {docsLink}.",
     "audit": "Audit",
     "guestAccess_info": "Access to the shared folder is granted even if invalid credentials are provided.",
-    "everyone_info": "A guest, or an authorized user that does not match any ACL."
+    "everyone_info": "A guest, or an authorized user that does not match any ACL.",
+    "audit_log": "Enable this option to save read actions inside the database. If the option is not checked, read actions will be logged inside /var/log/smbaudit.log but will not be saved inside the database."
   },
   "dashboard": {
     "title": "File server dashboard",
@@ -147,7 +148,8 @@
     "deleted_error": "Audit not deleted.",
     "details": "Show details",
     "show_audit_details": "Show audit details",
-    "update_at": "Update at"
+    "update_at": "Update at",
+    "advanced_search": "Advanced search"
   },
   "logs": {
     "menu_title": "Logs",
@@ -167,7 +169,8 @@
     "no_inherit": "Grant full control to the creator",
     "settings_ok": "Settings updated successfully!",
     "settings_error": "Settings not updated.",
-    "settings_updated_ok": "Settings saved correctly"
+    "settings_updated_ok": "Settings saved correctly",
+    "audit_log": "Enable auditing of read actions"
   },
   "about": {
     "website": "Web site",
